--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -92,12 +92,12 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    gap: var(--sidebar-gap);
   }
 
   // Remote Card
   .remote-card {
-    margin: 0 var(--card-margin);
+    margin: var(--card-margin);
+    margin-bottom: 0;
     padding: var(--card-padding);
     border-radius: var(--modal-radius);
     background: var(--secondary-background);
