--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 </div> -->
 
 <!-- Main Layout -->
-<div class="app-wrapper">
+<div class="app-wrapper" appShortcutHandler>
   <router-outlet></router-outlet>
   @if (!completedOnboarding) {
   <app-onboarding class="onboarding" (completed)="finishOnboarding()">
